duah-apps/graph/graph-dep.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: duah-graph-dep
  namespace: duah-apps
  labels:
    app: duah-graph
spec:
  replicas: 4
  strategy:
    rollingUpdate:
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      app: duah-graph
  template:
    metadata:
      labels:
        app: duah-graph
    spec:
      containers:
      - name: duah-graph
        image: ghcr.io/denuafhaengige/duah-graph:sha-029a447 # {"$imagepolicy": "duah-apps:duah-graph-image-policy"}
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: duah-shared-storage
          mountPath: /mnt/shared-storage
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        - name: health
          containerPort: 9090
          protocol: TCP
        resources:
          limits:
            cpu: 1024m
            memory: 2048Mi
          requests:
            cpu: 128m
            memory: 256Mi
        livenessProbe:
          httpGet:
            path: /healthz/live
            port: health
          failureThreshold: 3
          periodSeconds: 10
          initialDelaySeconds: 30
        readinessProbe:
          httpGet:
            path: /healthz/ready
            port: health
          failureThreshold: 3
          periodSeconds: 10
          initialDelaySeconds: 30
      volumes:
      - name: duah-shared-storage
        persistentVolumeClaim:
          claimName: duah-shared-storage-pvc
